@@ -32,37 +32,23 @@
 
 @implementation AppController
 
-+ (void)initialize
-{
-    NSMutableDictionary *defaults = [NSMutableDictionary dictionary];
 
-  /*
-   * Register your app's defaults here by adding objects to the
-   * dictionary, eg
-   *
-   * [defaults setObject:anObject forKey:keyForThatObject];
-   *
-   */
-
-    [[NSUserDefaults standardUserDefaults] registerDefaults:defaults];
-    [[NSUserDefaults standardUserDefaults] synchronize];
-}
 
 - (id)init
 {
-    NSFont *font;
+  NSFont *font;
     
-    if ((self = [super init]))
+  if ((self = [super init]))
     {
-        connMode = defaultMode;
+      connMode = defaultMode;
         
-        threadRunning = NO;
-        
-        font = [NSFont userFixedPitchFontOfSize: 0];
-        textAttributes = [NSMutableDictionary dictionaryWithObject:font forKey:NSFontAttributeName];
-        [textAttributes retain];        
+      threadRunning = NO;
+
+      font = [NSFont userFixedPitchFontOfSize: 0];
+      textAttributes = [NSMutableDictionary dictionaryWithObject:font forKey:NSFontAttributeName];
+      [textAttributes retain];        
     }
-    return self;
+  return self;
 }
 
 - (void)dealloc
